# GHC22Qualification

./: .gitignore  CMakeLists.txt  README.md
include/: Contributor.h  Project.h  Skill.h  TestCase.h
src/: CMakeLists.txt  TestCase.cpp  main.cpp
